# Redes

./: .gitignore
P1/: CMakeLists.txt  cliente.c  servidor.c
P1/socket/: cliente.out  clienteUDP-Actualizado.c
P2/: CMakeCache.txt  CMakeLists.txt  Makefile  Panel.cpp  Panel.hpp  cliente  cliente.cpp  cmake_install.cmake  panel.cpp  panel.hpp  panel_unittest.cpp  servidor  servidor.cpp  testPanel  untitled.cpp
P2/ejemplos/ChatEjemplo/: ejemploClienteChat-Actualizado.c  ejemploServidorChat-Actualizado.c
P3/: P3_redes.odt  packetracer.pkt
P4/: ejemplo-clase.pkt  ejercicio1.pkt  ejercicio2.pkt  ejercicio3.pkt  ejercicio4.pkt  explicaciones  modulos  ospf-clase.pkt  practica4.pkt
P5/: ejercicio-NAT.pka  ejercicio-NATsinResolver.pka  ejercicioDCHP-DNS.pka  ejercicioDHCP-DNSsinResolver.pka  ejercicioDHCP.pka  ejercicioDHCPsinResolver.pka
P6/: practica6.odt
